Adiconar veículo a tabela

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <h1>Adicionar novo veículo</h1>
           </header>
 
-          <fieldset class="">
+          <fieldset>
             <div class="form-container">
               <span id="erroMarca" class="erro-msg"></span>
               <label for="marca">Marca:</label>
@@ -95,7 +95,7 @@
               placeholder="Digite a marca do veículo">
             </div>
           </fieldset>
-          <fieldset class="">
+          <fieldset>
             <div class="form-container">
               <span id="erroModelo" class="erro-msg"></span>
               <label for="modelo">Modelo:</label>
@@ -103,7 +103,7 @@
               placeholder="Digite o modelo do veículo">
             </div>
           </fieldset>
-          <fieldset class="">
+          <fieldset>
             <div class="form-container">
               <span id="erroAno" class="erro-msg"></span>
               <label for="ano">Ano:</label>
@@ -111,7 +111,7 @@
               placeholder="Digite a ano do veículo">
             </fieldset>
           </div>
-          <fieldset class="">
+          <fieldset>
             <div class="form-container">
               <span id="erroCor" class="erro-msg"></span>
               <label for="cor">Cor:</label>
