Validação de formulário e limpeza dos dados dos inputs

--- a/index.html
+++ b/index.html
@@ -109,16 +109,16 @@
               <label for="ano">Ano:</label>
               <input id="ano" type="number" name="ano" class="campo"
               placeholder="Digite a ano do veículo">
-            </fieldset>
-          </div>
+            </div>
+          </fieldset>
           <fieldset>
             <div class="form-container">
               <span id="erroCor" class="erro-msg"></span>
               <label for="cor">Cor:</label>
               <input id="cor" type="text" name="cor" class="campo"
               placeholder="Digite a cor do veículo">
-            </fieldset>
-          </div>
+            </div>
+          </fieldset>
           <button id="adicionarVeiculo" class="adicionar" type="submit" name="button">Adicionar</button>
         </form>
 
@@ -127,6 +127,7 @@
   </main>
 
   <script src="./js/adicionar_veiculo.js"></script>
+  <script src="./js/validacoes.js"></script>
 
 </body>
 </html>
