Remover linha da tabela

--- a/index.html
+++ b/index.html
@@ -28,12 +28,13 @@
             </header>
             <span class="erro">Inválido</span><span class="ok">OK</span>
           </div>
+          <!-- DESAFIO - CAMPO DE FILTRO
           <div class="procura">
             <header>
               <h1>Filtrar:</h1>
             </header>
             <input class="campo filtro" id="filtrar-tabela" type="text" name="filtro" placeholder="Digite o nome do veículo">
-          </div>
+          </div> -->
         </div>
 
         <table id="tabelaVeiculos" class="table">
@@ -79,7 +80,8 @@
           </tbody>
         </table>
 
-        <!-- <button id="buscarVeiculo" class="adicionar" type="submit" name="button">buscar veículos</button> -->
+        <!-- DESAFIO - BUSCA DE DADOS AJAX
+          <button id="buscarVeiculo" class="adicionar" type="submit" name="button">buscar veículos</button> -->
 
         <form id="formaAdiciona" class="form">
 
@@ -128,6 +130,7 @@
 
   <script src="./js/adicionar_veiculo.js"></script>
   <script src="./js/validacoes.js"></script>
+  <script src="./js/remover_veiculo.js"></script>
 
 </body>
 </html>
