Remover linha da tabela

--- a/index.html
+++ b/index.html
@@ -28,13 +28,14 @@
             </header>
             <span class="erro">Inválido</span><span class="ok">OK</span>
           </div>
-          <!-- DESAFIO - CAMPO DE FILTRO
+          <!-- DESAFIO - CAMPO DE FILTRO -->
           <div class="procura">
             <header>
               <h1>Filtrar:</h1>
             </header>
-            <input class="campo filtro" id="filtrar-tabela" type="text" name="filtro" placeholder="Digite o nome do veículo">
-          </div> -->
+            <input class="campo filtro" id="filtrarTabela" type="text" name="filtro" 
+            placeholder="Digite o nome do veículo">
+          </div>
         </div>
 
         <table id="tabelaVeiculos" class="table">
