filtro da tabela

--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
   <script src="./js/adicionar_veiculo.js"></script>
   <script src="./js/validacoes.js"></script>
   <script src="./js/remover_veiculo.js"></script>
+  <script src="./js/filtro_tabela.js"></script>
 
 </body>
 </html>
