Arquivo JSON incluido

--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
           </tbody>
         </table>
 
-        <!-- DESAFIO - BUSCA DE DADOS AJAX
-          <button id="buscarVeiculo" class="adicionar" type="submit" name="button">buscar veículos</button> -->
+        <!-- DESAFIO - BUSCA DE DADOS AJAX -->
+        <button id="buscarVeiculo" class="adicionar" type="submit" name="button">buscar veículos</button>
 
         <form id="formaAdiciona" class="form">
 
