--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
   <script src="./js/validacoes.js"></script>
   <script src="./js/remover_veiculo.js"></script>
   <script src="./js/filtro_tabela.js"></script>
+  <script src="./js/buscar_veiculos.js"></script>
 
 </body>
 </html>
